EXTRA_DIST         = lib.sh ftp.sh tftp.sh oack.sh dupack.sh rollover.sh wrq.sh zombies.sh mlst.sh maxfiles.sh
CLEANFILES         = *~ *.trs *.log

TEST_EXTENSIONS    = .sh
TESTS_ENVIRONMENT  = unshare -mrun --map-auto

TESTS              = ftp.sh
TESTS             += tftp.sh
TESTS             += oack.sh
TESTS             += dupack.sh
TESTS             += rollover.sh
TESTS             += wrq.sh
TESTS             += zombies.sh
TESTS             += mlst.sh
TESTS             += maxfiles.sh
